<resources>
    <string name="app_name">ProyectoActividades</string>
    <string name="texto_boton_siguiente">Siguiente</string>
    <string name="texto_titulo">Formulario</string>
    <string name="nombre">Nombre Completo</string>
    <string name="nacimiento">Fecha de Nacimiento</string>
    <string name="telefono">Telefono</string>
    <string name="email">E-mail</string>
    <string name="descripcion">Descripción del contacto</string>
    <string name="titulo2">Confirmar Datos</string>
    <string name="txt_btn_2">Editar Datos</string>
</resources>