<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ConfirmarDatos">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo2"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        />


        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:textSize="20dp"
            android:layout_marginTop="30dp"
            />

        <TextView
            android:id="@+id/tvNacimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/nacimiento"
            android:textSize="20dp"
            android:layout_marginTop="30dp"
            />

        <TextView
            android:id="@+id/tvTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/telefono"
            android:textSize="20dp"
            android:layout_marginTop="30dp"
            />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="20dp"
            android:layout_marginTop="30dp"            />

        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/descripcion"
            android:textSize="20dp"
            android:layout_marginTop="30dp"            />

        <Button
            android:id="@+id/btnEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/txt_btn_2"
            android:textSize="20dp"
            android:theme="@style/EstiloBotonSiguiente"
            />

    </LinearLayout>


