<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_titulo"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/tvTitulo"
        >

        <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/nombre"
        android:inputType="text"
        />

        <DatePicker
            android:id="@+id/dpNacimiento"
            android:layout_width="340dp"
            android:layout_height="282dp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="25dp"
            android:calendarViewShown="false"
            android:scaleX=".7"
            android:scaleY=".7"
            />

        <EditText
            android:id="@+id/etTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:hint="@string/telefono"
            android:inputType="text"
            />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:hint="@string/email"
            android:inputType="text"
            />
        <EditText
            android:id="@+id/etDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:hint="@string/descripcion"
            android:inputType="text"
            />

        <Button
            android:id="@+id/btnSiguiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/texto_boton_siguiente"
            android:textSize="20dp"
            android:theme="@style/EstiloBotonSiguiente"
            />
    </LinearLayout>



</RelativeLayout>